--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ iniconfig==2.0.0
 packaging==24.1
 pluggy==1.5.0
 prompt_toolkit==3.0.48
+Pygments==2.18.0
 pytest==8.3.3
 ttask_manager==0.2.6
 wcwidth==0.2.13
